Refactoring. Format dates properly and do not use POST to fetch data